# lucien_wm

./: .gitignore  .xinitrc  CMakeLists.txt  README.md  project.lua  run.sh
sources/: CMakeLists.txt  main.cpp
sources/logger/: CMakeLists.txt  logger.cpp
sources/util/: CMakeLists.txt
sources/window_manager/: CMakeLists.txt  window_manager.cpp  window_manager.hpp
